style: fix alignment of header section in daytime.css

--- a/css/daytime.css
+++ b/css/daytime.css
@@ -14,6 +14,7 @@
 .header {
     background-color: #00000055;
     width: 100%;
+    align-self: center;
 }
 
 h1 {
